# Terrestrial-Aerial-Navigation

./: README.md
src/: run.sh
src/TIE_navigation/bspline/: CMakeLists.txt  package.xml
src/TIE_navigation/bspline/src/: non_uniform_bspline.cpp
src/TIE_navigation/bspline_opt/: CMakeLists.txt
src/TIE_navigation/bspline_opt/src/: bspline_optimizer.cpp
src/TIE_navigation/path_searching/: CMakeLists.txt  package.xml
src/TIE_navigation/path_searching/src/: astar.cpp  kinodynamic_astar.cpp
src/TIE_navigation/plan_env/: CMakeLists.txt  package.xml
src/TIE_navigation/plan_env/src/: edt_environment.cpp  sdf_map.cpp
src/TIE_navigation/plan_manage/: CMakeLists.txt  package.xml
src/TIE_navigation/plan_manage/config/: traj.rviz
src/TIE_navigation/plan_manage/launch/: kino_algorithm.xml  kino_replan.launch  simulator.xml
src/TIE_navigation/plan_manage/src/: fast_planner_node.cpp  kino_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/TIE_navigation/traj_utils/: CMakeLists.txt  package.xml
src/TIE_navigation/traj_utils/include/traj_utils/: planning_visualization.h  polynomial_traj.h  traj_utils.hpp
src/TIE_navigation/traj_utils/src/: planning_visualization.cpp  poly_traj_utils.cpp  polynomial_traj.cpp
src/uav_simulator/Utils/multi_map_server/: CMakeLists.txt
src/uav_simulator/Utils/poly_traj_server/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/poly_traj_server/launch/: traj_server.launch
src/uav_simulator/Utils/poly_traj_server/src/: traj_server.cpp
src/uav_simulator/Utils/pose_utils/: CMakeLists.txt
src/uav_simulator/Utils/uav_utils/: CMakeLists.txt
src/uav_simulator/local_sensing/: CMakeLists.txt
(+10 files in other folders)
